--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.15",
+    "@mui/types": "^7.2.8",
     "@reduxjs/toolkit": "^1.9.7",
     "@types/react-redux": "^7.1.28",
     "framer-motion": "^10.16.4",
