--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/types": "^7.2.8",
     "@reduxjs/toolkit": "^1.9.7",
     "@types/react-redux": "^7.1.28",
+    "axios": "^1.6.0",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
